# goptical

./: CMakeLists.txt  FindPLplot.cmake  gopticalConfig.cmake.in
examples/: CMakeLists.txt
goptical_core/: CMakeLists.txt
goptical_core/src/: io_renderer_plplot.cc
goptical_core/src/Goptical/Sys/: source_rays.hh
goptical_core/tests/: test_2d_plot.cc  test_patterns.cc  test_rendering.cc  test_shapes.cc
goptical_core/zemax_catalog/: THORLABS.ZMF  rayopt_zmf_orig.py  zemax_lens_parser.cpp  zemax_lens_parser.hh  zemax_parse_test.cpp  zemax_zmf.cpp  zemax_zmf.hh  zmf_read.py  zmf_test.cpp  zmfdump.cpp
goptical_design/: CMakeLists.txt
